# OpenHanami

./: .ansible-lint  .clang-format  .gitattributes  .gitignore  .gitmodules  .secrets.baseline  CHANGELOG  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  Earthfile  Hanami-AI.pro  Hanami.pro  LICENSE  README.md  ROADMAP.md  SECURITY.md  build.sh  commitlint.config.mjs  mkdocs.yml
src/Hanami/: CHANGELOG_old  CMakeLists.txt  Hanami.pro
src/Hanami/src/: args.h  common.h  config.h  hanami_root.cpp  hanami_root.h  main.cpp
src/Hanami/src/common/: defines.h  enums.h  functions.h  structs.h  typedefs.h  using.h
src/Hanami/src/core/: cuda_functions.h  routing_functions.h  temp_file_handler.cpp  temp_file_handler.h  thread_binder.cpp  thread_binder.h  value_container.h
src/Hanami/src/database/: audit_log_table.cpp  audit_log_table.h  checkpoint_table.cpp  checkpoint_table.h  cluster_snapshot_table.cpp  cluster_table.cpp  cluster_table.h  data_set_table.cpp  data_set_table.h  dataset_table.cpp  dataset_table.h  error_log_table.cpp  error_log_table.h  projects_table.cpp  projects_table.h  request_result_table.cpp  request_result_table.h  tempfile_table.cpp  tempfile_table.h  users_table.cpp  users_table.h
src/Hanami/src/documentation/: generate_rest_api_docu.cpp  generate_rest_api_docu.h
src/Hanami/src/hardware/: power_measuring.h  speed_measuring.cpp
src/Hanami/tests/unit_tests/: cluster_test.cpp  cluster_test.h  main.cpp
src/hanami/: CMakeLists.txt
src/hanami/src/: args.h  config.h  hanami_root.cpp  hanami_root.h  main.cpp
src/hanami/src/core/: routing_functions.h  temp_file_handler.cpp  temp_file_handler.h
src/hanami/src/database/: checkpoint_table.cpp  cluster_table.cpp  cluster_table.h  dataset_table.cpp  dataset_table.h  projects_table.cpp  projects_table.h  tempfile_table.h  users_table.cpp  users_table.h
src/hanami/src/documentation/: generate_rest_api_docu.cpp  generate_rest_api_docu.h
src/hanami/tests/unit_tests/: main.cpp
src/libraries/: CMakeLists.txt  libraries.pro
src/libraries/hanami_args/: CMakeLists.txt  README.md
src/libraries/hanami_args/src/: CMakeLists.txt  arg_parser.cpp  src.pro
src/libraries/hanami_args/tests/: CMakeLists.txt  tests.pro
src/libraries/hanami_cluster_parser/: CMakeLists.txt  hanami_cluster_parser.pro
src/libraries/hanami_cluster_parser/src/: cluster_meta.cpp  lexxer.pro  parser.pro  src.pro
src/libraries/hanami_cluster_parser/tests/: CMakeLists.txt
src/libraries/hanami_common/: CMakeLists.txt  Doxyfile  hanami_common.pro
src/libraries/hanami_common/src/: logger.cpp  memory_counter.cpp  process_execution.cpp  progress_bar.cpp  src.pro  state.h  statemachine.cpp  uuid.cpp
src/libraries/hanami_common/tests/: CMakeLists.txt  tests.pro
src/libraries/hanami_config/: CHANGELOG_old  CMakeLists.txt  README.md
src/libraries/hanami_config/src/: CMakeLists.txt  config_handler.cpp  src.pro
src/libraries/hanami_config/tests/: CMakeLists.txt  tests.pro
src/libraries/hanami_cpu/: CHANGELOG_old  CMakeLists.txt  hanami_cpu.pro
src/libraries/hanami_cpu/src/: CMakeLists.txt  cpu.cpp  memory.cpp  rapl.cpp  src.pro
src/libraries/hanami_cpu/tests/: CMakeLists.txt  tests.pro
src/libraries/hanami_crypto/: CMakeLists.txt
src/libraries/hanami_crypto/src/: common.cpp  hashes.cpp  src.pro  symmetric_encryption.cpp
src/libraries/hanami_database/: CHANGELOG_old  CMakeLists.txt  README.md
src/libraries/hanami_database/src/: CMakeLists.txt  sql_database.cpp  sql_table.cpp  (+1 more)
src/libraries/hanami_files/: CMakeLists.txt
src/libraries/hanami_hardware/: CMakeLists.txt  hanami_hardware.pro
src/libraries/hanami_ini/: CHANGELOG_old  CMakeLists.txt
src/libraries/hanami_json/: hanami_json.pro
src/libraries/hanami_messages/: README.md  message_sub_types.h
src/libraries/hanami_network/: CMakeLists.txt
src/libraries/hanami_obj/: CHANGELOG_old  CMakeLists.txt  README.md
src/libraries/hanami_opencl/: CMakeLists.txt  README.md
src/libraries/hanami_policies/: CHANGELOG_old  CMakeLists.txt  README.md  hanami_policies.pro
src/libraries/hanami_sqlite/: CMakeLists.txt
src/libraries/libAzukiHeart/: CHANGELOG_old  README.md  build.sh  libAzukiHeart.pro
src/libraries/libKitsunemimiArgs/: CHANGELOG_old  build.sh
src/libraries/libKitsunemimiCommon/: CHANGELOG_old  README.md  build.sh  defaults.pri
src/libraries/libKitsunemimiConfig/: README.md  build.sh
src/libraries/libKitsunemimiCpu/: README.md  build.sh
src/libraries/libKitsunemimiCrypto/: CHANGELOG_old  README.md  build.sh
src/libraries/libKitsunemimiHanamiClusterParser/: README.md  build.sh  libKitsunemimiHanamiClusterParser.pro
src/libraries/libKitsunemimiHanamiCommon/: CHANGELOG_old  build.sh
src/libraries/libKitsunemimiHanamiDatabase/: CHANGELOG_old  README.md  build.sh
src/libraries/libKitsunemimiHanamiEndpoints/: CHANGELOG_old  README.md  build.sh
src/libraries/libKitsunemimiHanamiFiles/: README.md
src/libraries/libKitsunemimiHanamiMessages/: message_sub_types.h
src/libraries/libKitsunemimiHanamiNetwork/: CHANGELOG_old  README.md  build.sh
src/libraries/libKitsunemimiHanamiPolicies/: build.sh
src/libraries/libKitsunemimiHanamiSegmentParser/: README.md  build.sh
src/libraries/libKitsunemimiIni/: README.md  build.sh  libKitsunemimiIni.pro
src/libraries/libKitsunemimiJson/: CHANGELOG_old  README.md  build.sh
src/libraries/libKitsunemimiJwt/: CHANGELOG_old  README.md  build.sh
src/libraries/libKitsunemimiNetwork/: CHANGELOG_old  README.md  build.sh  libKitsunemimiNetwork.pro
src/libraries/libKitsunemimiObj/: build.sh
src/libraries/libKitsunemimiOpencl/: CHANGELOG_old  build.sh  libKitsunemimiOpencl.pro
src/libraries/libKitsunemimiSakuraDatabase/: build.sh
src/libraries/libKitsunemimiSakuraHardware/: CHANGELOG_old  README.md  build.sh
src/libraries/libKitsunemimiSakuraNetwork/: CHANGELOG_old  README.md  build.sh
src/libraries/libKitsunemimiSqlite/: CHANGELOG_old  README.md  build.sh
src/libraries/libMisakiGuard/: CHANGELOG_old  README.md  build.sh
src/libraries/libShioriArchive/: CHANGELOG_old  README.md  build.sh
(+2772 files in other folders)
