cmake_minimum_required(VERSION 3.16)

set(CMAKE_INCLUDE_CURRENT_DIR ON)

add_subdirectory(hanami_common)
add_subdirectory(hanami_crypto)
add_subdirectory(hanami_ini)
add_subdirectory(hanami_args)
add_subdirectory(hanami_config)
add_subdirectory(hanami_cpu)
add_subdirectory(hanami_sqlite)
add_subdirectory(hanami_database)
add_subdirectory(hanami_policies)
add_subdirectory(hanami_cluster_parser)
add_subdirectory(hanami_files)
add_subdirectory(hanami_hardware)
